# vento

./: .clang-format  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  LICENSE-FREE-USE.md  README.md  configure.bat  configure.ps1  main.py  requirements.txt
docs/: CMAKE_SETUP.md
docs/context/: c1.md  estructura.md  p1.md  p2.md  p3.md  p4.md  p5.md  p6.md  plan.md  r1.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  audit_logger.py  backup_manager.py  config.py  database.py  error_handler.py  interfaces.py  security.py  validators.py
src/core/database/: DatabaseManager.cpp  DatabaseManager.hpp  DatabaseSchema.hpp
src/core/logger/: Logger.cpp  Logger.hpp
src/core/utils/: EventBus.hpp  FileHandler.cpp  FileHandler.hpp  Types.hpp
src/features/: CMakeLists.txt
src/features/backup/: models.py  repository.py  service.py  views.py
src/features/currency/: CMakeLists.txt  CurrencyModel.hpp  CurrencyRepository.cpp  CurrencyRepository.hpp  CurrencyService.cpp  CurrencyService.hpp  CurrencyTypes.hpp
src/features/exchange_rate/: models.py  repository.py  service.py  views.py
src/features/inventory/: CMakeLists.txt  InventoryService.cpp  InventoryService.hpp  InventoryTypes.hpp  Product.hpp  ProductModel.cpp  ProductModel.hpp  ProductRepository.cpp  ProductRepository.hpp
src/features/products/: models.py  repository.py  service.py  views.py
src/features/reporting/: CMakeLists.txt  ReportingRepository.cpp  ReportingRepository.hpp  ReportingService.cpp  ReportingService.hpp  ReportingTypes.hpp
src/features/reports/: service.py  views.py
src/features/sales/: CMakeLists.txt  CartModel.cpp  CartModel.hpp  Sale.hpp  SaleItem.hpp  SalesModel.cpp  SalesModel.hpp  SalesRepository.cpp  SalesRepository.hpp  SalesService.cpp  SalesService.hpp  SalesTypes.hpp  models.py  repository.py  service.py  views.py
src/ui/: CMakeLists.txt  Main.qml  components.py  main_window.py
src/ui/qml/: Main.qml  ReportsView.qml  qml.qrc
src/ui/qml/components/: AppHeader.qml  ProductCard.qml  ProductForm.qml  ProductList.qml  SearchBar.qml  Sidebar.qml  StatCard.qml  Toast.qml  ValidatedInput.qml
src/ui/qml/theme/: Theme.qml
src/ui/qml/views/: CurrencyView.qml  DashboardView.qml  InventoryView.qml  SalesView.qml  SettingsView.qml
tests/: CMakeLists.txt  test_cascade_delete.py
tests/unit/: ReportingServiceTest.cpp
